Boilerplate for mobile dev

--- a/Desktop/package.json
+++ b/Desktop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-electron",
+  "name": "Omnicalculator",
   "version": "0.1.0",
   "description": "Simple boilerplate for developing an Electron app with React",
   "author": "willjw3",
