--- a/Desktop/package.json
+++ b/Desktop/package.json
@@ -2,7 +2,7 @@
   "name": "Omnicalculator",
   "version": "0.1.0",
   "description": "Simple boilerplate for developing an Electron app with React",
-  "author": "willjw3",
+  "author": "craftsmaker",
   "build": {
     "appId": "react.electron",
     "win": {
